# OpenGL_Template

./: CMakeLists.txt  README.md  imgui.ini  main.cpp
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
dependencies/glm/: CMakeLists.txt
dependencies/imgui/: CMakeLists.txt
dependencies/stb_image/: CMakeLists.txt
header_files/: mesh.h  model.h  shader.h
resources/shaders/: fragment.glsl
